--- a/src/Component/TopicHour/index.module.css
+++ b/src/Component/TopicHour/index.module.css
@@ -22,7 +22,7 @@ p {
 img {
     overflow: hidden;
     /*box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);*/
-    border-radius:10%;
+    /* border-radius:10%; */
     width: 257px;
     height: 287px;
     overflow: hidden;
