--- a/src/Pages/Messages/index.module.css
+++ b/src/Pages/Messages/index.module.css
@@ -29,7 +29,7 @@ p {
 }
 
 #CRegtangle {
-    background-image: url(../../assets//OLO2E30-2.png);
+    background-image: url(../../assets/OLO2E30-2.png);
     /*background-color: rgba(217, 217, 217, 0.3);*/
     /*border-top: 2px solid #cba15f;*/
     height: 150px;
