--- a/src/Pages/Photo/index.module.css
+++ b/src/Pages/Photo/index.module.css
@@ -60,6 +60,7 @@
   width: 384px;
   text-align: center;
   direction: rtl;
+  cursor: pointer;
   #h55 {
     color: #000000;
     font-family: GE SS Two;
