--- a/src/Component/ImportentLink/index.module.css
+++ b/src/Component/ImportentLink/index.module.css
@@ -1,21 +1,30 @@
-#parent{
-    min-height: 500px;
-    max-height: 90%;
-    h2{
-        font-family: "GE SS-Medium";
-        color: var(--fontyelowColor);
-        font-weight: 500;
-        font-size: 35px;
-        margin-bottom: 30px;
-    }
+#parent {
+  min-height: 500px;
+  max-height: 90%;
+  h2 {
+    font-family: "GE SS-Medium";
+    color: var(--fontyelowColor);
+    font-weight: 500;
+    font-size: 35px;
+    margin-bottom: 30px;
+  }
 }
-.carddiv{
-    width: 249px;
-    height: 248px;
-    border: 7px solid rgba(217, 217, 217, 1);
-    overflow: hidden;
-    object-fit: cover;
-    img{
-        width:90%;
-    }
+.carddiv {
+  width: 249px;
+  height: 248px;
+  border: 7px solid rgba(217, 217, 217, 1);
+  overflow: hidden;
+  object-fit: cover;
+  img {
+    width: 90%;
+  }
 }
+/* .mySwipeerr {
+  .swiper-pagination {
+    margin-top: 200px !important;
+    .swiper-pagination-bullet {
+        border-radius: 8px !important;
+    }
+    
+  }
+} */
