--- a/src/Component/News/index.scss
+++ b/src/Component/News/index.scss
@@ -57,7 +57,9 @@
     // top: 396px;
     width: 258px;
   }
-  
+  .newsId{
+    // gap:28px;
+  }
  .overlap-26 {
     background-color: #d9d9d9;
     background-image: url(../../assets/plan.jpg);
