--- a/src/Pages/AllVideo/index.module.css
+++ b/src/Pages/AllVideo/index.module.css
@@ -189,3 +189,11 @@ p {
   color: #724780 !important;
   border:1px solid #724780 !important;
 }
+.activelink {
+    color:var(--purpleColor) !important;
+    text-decoration-color:var(--purpleColor) !important;
+    text-decoration-line: underline !important;
+    text-decoration-thickness: 2px !important;
+    text-underline-offset: 10px;
+    
+  }
