--- a/src/Pages/Messages/index.module.css
+++ b/src/Pages/Messages/index.module.css
@@ -133,3 +133,11 @@ h7 {
   color: #724780 !important;
   border:1px solid #724780 !important;
 }
+.activelink {
+    color:var(--purpleColor) !important;
+    text-decoration-color:var(--purpleColor) !important;
+    text-decoration-line: underline !important;
+    text-decoration-thickness: 2px !important;
+    text-underline-offset: 10px;
+    
+  }
