--- a/src/Pages/Photo/index.module.css
+++ b/src/Pages/Photo/index.module.css
@@ -25,6 +25,7 @@
     object-fit: fill;
     width: 100%;
     height: 100%;
+      flex-shrink: 0;
     border-radius: 10px;
   }
 }
@@ -61,6 +62,7 @@
   text-align: center;
   direction: rtl;
   cursor: pointer;
+    height: 500px;
   #h55 {
     color: #000000;
     font-family: GE SS Two;
@@ -213,3 +215,11 @@ p {
     color: white;
   }
 }
+.activelink {
+    color:var(--purpleColor) !important;
+    text-decoration-color:var(--purpleColor) !important;
+    text-decoration-line: underline !important;
+    text-decoration-thickness: 2px !important;
+    text-underline-offset: 10px;
+    
+  }
