--- a/src/Component/Footer/index.module.css
+++ b/src/Component/Footer/index.module.css
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;  
     ul{
         padding: 0;
-        li{
+        #li{
             font-size: 16px;
             font-weight: 300;
             line-height: 50px;
