responsive homepage tablet only

--- a/src/Component/About/index.scss
+++ b/src/Component/About/index.scss
@@ -62,3 +62,8 @@
   span{
     
   }
+  @media screen and (max-width: 992px) and (min-width: 768px) {
+    .aboutsection{
+      margin-top: 75% !important;
+    }
+  }
