--- a/src/Component/ImportentLink/index.module.css
+++ b/src/Component/ImportentLink/index.module.css
@@ -11,12 +11,12 @@
 }
 .carddiv {
   width: 249px;
-  height: 248px;
+  height: 240px;
   border: 7px solid rgba(217, 217, 217, 1);
   overflow: hidden;
   object-fit: cover;
   img {
-    width: 90%;
+    width: 75%;
   }
 }
 /* .mySwipeerr {
@@ -28,3 +28,19 @@
     
   }
 } */
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  .carddiv {
+    width: 230px;
+    img {
+      width: 80%;
+    }
+  }
+}
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+   .carddiv {
+    width: 230px;
+    img {
+      width: 80%;
+    }
+  }
+}
