--- a/src/Component/News/index.scss
+++ b/src/Component/News/index.scss
@@ -1,127 +1,183 @@
- .overlap-22 {
-    background-color: #d9d9d933;
-    height: 709px;
-    // left: 160px;
-    // top: 670px;
-    // width: 1120px;
-    padding: 40px 44px;
-    
-  }
-  
- .text-wrapper-44 {
-    color: var(--fontyelowColor);
-    // direction: rtl;
-    font-family: "GE SS-Bold";
-    font-size: 32px;
-    font-weight: 700;
-    // left: 490px;
-    // letter-spacing: 0;
-    // line-height: normal;
-    text-align: center;
-    // top: 39px;
-  }
-  
-//  .overlap-23 {
-//     background-color: #d9d9d9;
-//     background-image: url(../../assets/image-19.png);
-//     background-position: 50% 50%;
-//     background-size: cover;
-//     height: 264px;
-//     // left: 554px;
-//     // top: 132px;
-//     width: 258px;
-//   }
+.overlap-22 {
+  background-color: #d9d9d933;
+  height: 709px;
+  // left: 160px;
+  // top: 670px;
+  // width: 1120px;
+  padding: 40px 44px;
+}
 
-//    .overlap-224 {
-//     background-color: #d9d9d9;
-//     background-image: url(../../assets/president.png);
-//     background-position: 50% 50%;
-//     background-size: cover;
-//     height: 264px;
-//     // left: 38px;
-//     // top: 132px;
-//     width: 258px;
+.text-wrapper-44 {
+  color: var(--fontyelowColor);
+  // direction: rtl;
+  font-family: "GE SS-Bold";
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.date {
+  color: var(--fontyelowColor);
+  font-size: 12px;
+}
+.overlap-25 {
+  background-color: #d9d9d9;
+  background-image: url(../../assets/meet.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+  height: 264px;
+  width: 258px;
+}
+.newsId {
+  // gap:28px;
+}
+.overlap-26 {
+  background-color: #d9d9d9;
+  background-image: url(../../assets/plan.jpg);
+  background-size: 100% 100%;
+  height: 264px;
+  width: 258px;
+}
+
+.text-wrapper-45 {
+  color: #000000;
+  font-family: "GE SS Two-Light", Helvetica;
+  font-size: 16px;
+  font-weight: 300;
+  padding-left: 10px;
+  line-height: normal;
+  text-align: center;
+  padding: 0 10px;
+  width: 264px;
+}
+
+.text-wrapper-46 {
+  color: #000000;
+  font-family: "GE SS Two-Light", Helvetica;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: normal;
+  text-align: center;
+  width: 246px;
+}
+
+.text-wrapper-47 {
+  color: #000000;
+  font-family: "GE SS Two-Light";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: normal;
+  text-align: center;
+  width: 215px;
+}
+
+.text-wrapper-48 {
+  color: #000000;
+  font-family: "GE SS Two-Light";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: normal;
+  text-align: center;
+  width: 234px;
+}
+
+// @media screen and (max-width: 992px) and (min-width: 768px) {
+// .part1{
+//   img{
+//     width: 218px;
+//     height:214px ;
 
 //   }
-  .date{
-    color: var(--fontyelowColor);
-    font-size:12px;
+//   .text-wrapper-47{
+//     font-size: 14px;
+//   }
+// }
+// .part2{
+//   img{
+//     width: 218px;
+//     height:214px ;
+
+//   }
+// }
+// }
+// للموبايل والشاشات الصغيرة
+@media screen and (max-width: 767px) {
+  .part1,
+  .part2 {
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 20px;
+
+    .newsId,
+    .d-flex.align-items-center {
+      flex-direction: column !important;
+      text-align: center;
+      gap: 10px;
+    }
+
+    img {
+      width: 100% !important;
+      height: auto !important;
+      max-width: 300px;
+    }
+
+    .text-wrapper-47,
+    .text-wrapper-46 {
+      width: 100% !important;
+      font-size: 14px !important;
+      padding: 0 10px;
+    }
+
+    .date {
+      font-size: 12px !important;
+    }
   }
- .overlap-25 {
-    background-color: #d9d9d9;
-    background-image: url(../../assets/meet.jpg);
-    background-position: 50% 50%;
-    background-size: cover;
-    height: 264px;
-    // left: 812px;
-    // top: 396px;
-    width: 258px;
+}
+
+// شاشات التابلت
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  .part1,
+  .part2 {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+
+    .newsId,
+    .d-flex.align-items-center {
+      gap: 15px;
+    }
   }
-  .newsId{
-    // gap:28px;
+}
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .all {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    .part1,
+    .part2 {
+      display: flex;
+      width: 80% !important;
+      
+      .newsId{
+        img{
+          width: 218px;
+          height: 224px;
+        }
+
+      }
+      
+       #textitems{
+        padding:0px !important;
+    }
+
+     
   }
- .overlap-26 {
-    background-color: #d9d9d9;
-    background-image: url(../../assets/plan.jpg);
-    background-size: 100% 100%;
-    height: 264px;
-    // left: 296px;
-    // top: 396px;
-    width: 258px;
+  .text-wrapper-46{
+    font-size: 14px;
   }
-  
- .text-wrapper-45 {
-    color: #000000;
-    font-family: "GE SS Two-Light", Helvetica;
-    font-size: 16px;
-    font-weight: 300;
-    // left: 830px !important;
-    // letter-spacing: 0;
-    padding-left:10px ;
-    line-height: normal;
-    text-align: center;
-    // top: 218px;
-    padding: 0 10px;
-    width: 264px;
+  .text-wrapper-47{
+     font-size: 14px;
   }
-  
- .text-wrapper-46 {
-    color: #000000;
-    font-family: "GE SS Two-Light", Helvetica;
-    font-size: 16px;
-    font-weight: 300;
-    // left: 30px;
-    // letter-spacing: 0;
-    line-height: normal;
-    text-align: center;
-    // top: 482px;
-    width: 246px;
-  }
-  
- .text-wrapper-47 {
-    color: #000000;
-    // direction: rtl;
-    font-family: "GE SS Two-Light";
-    font-size: 16px;
-    font-weight: 300;
-    // left: 315px;
-    // letter-spacing: 0;
-    line-height: normal;
-    text-align: center;
-    // top: 232px;
-    width: 215px;
-  }
-  
- .text-wrapper-48 {
-    color: #000000;
-    font-family: "GE SS Two-Light";
-    font-size: 16px;
-    font-weight: 300;
-    // left: 571px;
-    // letter-spacing: 0;
-    line-height: normal;
-    text-align: center;
-    // top: 495px;
-    width: 234px;
-  }
-  
+}
+}
