--- a/src/Component/TopicHour/index.module.css
+++ b/src/Component/TopicHour/index.module.css
@@ -35,3 +35,17 @@ img {
    /* border-radius: 50%;*/
 }
 }
+@media screen and (max-width: 992px) and (min-width: 768px) {
+    .TopicHour{
+        img{
+            height: 230px;
+        }
+    }
+}
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+    .TopicHour{
+        img{
+            height: 253px;
+        }
+    }
+}
