--- a/src/Component/Infograph/index.scss
+++ b/src/Component/Infograph/index.scss
@@ -13,6 +13,7 @@
   font-family: "GE SS-Bold", Helvetica;
   font-size: 32px;
   font-weight: 700;
+  text-decoration: none;
   // left: 470px;
   letter-spacing: 0;
   line-height: normal;
