--- a/src/Component/Video/index.scss
+++ b/src/Component/Video/index.scss
@@ -16,6 +16,7 @@
   font-size: 32px;
   font-weight: 700;
   // left: 419px;
+  text-decoration: none;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
