--- a/src/Component/Video/index.scss
+++ b/src/Component/Video/index.scss
@@ -1,145 +1,96 @@
-.parentvideo {
-  height: 603px;
-  left: 0;
-  width: 702px;
+.video-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 40px 20px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
-.overlap-28 {
-  height: 603px;
-  left: 0;
-  position: absolute;
-  width: 702px;
+
+.video-card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 20px;
 }
-.text-wrapper-52 {
+
+.video-title {
   color: #b58a35;
-  direction: rtl;
   font-family: "GE SS-Bold", Helvetica;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
-  // left: 419px;
   text-decoration: none;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 18px;
+  text-align: right;
 }
 
-.element-6 {
-  color: #000000;
-  direction: rtl;
+.video-description {
+  color: #000;
   font-family: "GE SS Two-Medium", Helvetica;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
-  left: 64px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 430px;
-  width: 580px;
+  text-align: right;
+  max-width: 90%;
+  line-height: 1.6;
 }
 
-.rectangle-19 {
-  height: 603px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 702px;
+.video-image-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  border: 8px solid black;
+  height: 300px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
-.rectangle-20 {
-  background-color: #000000;
-  border-radius: 32px;
-  height: 340px;
-  left: 51px;
-  position: absolute;
-  top: 123px;
-  width: 615px;
-}
-
-.mask-group-2 {
-  height: 316px;
-  left: 66px;
-  position: absolute;
-  top: 105px;
-  width: 579px;
-}
-
-.overlap-wrapper {
-  height: 70px;
-  left: 315px;
-  position: absolute;
-  top: 248px;
-  width: 70px;
-}
-/********************* hend *******************/
-#number {
-  min-height: 400px;
-  max-height: 90%;
-  background-image: url(../../assets//section-before.png);
-  /* background-position: 50%; */
-  background-size: cover;
-
-  #numbercontainer {
-    padding-top: 70px;
-  }
-}
-
-h2 {
-  font-family: "GE SS-Medium";
-  color: var(--fontyelowColor);
-  font-size: 32px;
-  font-weight: 500;
-  text-align: end;
-  margin-right: 6%;
-}
-
-h3 {
-  font-family: "Geist", sans-serif;
-  font-size: 50px;
-}
-#imgvedio {
-  border: 20px solid black;
+.video-thumbnail {
+  width: 100%;
+  height: 100%;
+  display: block;
   border-radius: 20px;
 }
-@media screen and (max-width: 992px) and (min-width: 768px) {
-  .parentvideo {
-    height: 520px;
 
-    display: flex;
-    .overlap-28 {
-      position: static;
-      height: 520px;
-    }
-  }
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-decoration: none;
 }
-@media screen and (max-width: 1024px) and (min-width: 769px) {
-  .overlap-wrapper {
-    left: 50%;
-  }
-  .mask-group-2 {
-    height: 336px;
-    left: 10%;
-    width: 809px;
-  }
-  .parentvideo {
-    height: 520px;
-    width: 100%;
 
-    display: flex;
-    .element-6 {
-      top: 460px;
-      transform: translateX(140px);
-    }
-    .overlap-28 {
-      position: static;
-      // height: 520px;
-      left: 10%;
-      width: 100%;
-      display: flex;
-      flex-direction: column !important;
-      justify-content: right !important;
-      align-items: flex-end !important;
-    }
+.play-icon-circle {
+  width: 80px;
+  height: 80px;
+  // background-color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.play-icon {
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 768px) {
+  .video-title {
+    font-size: 22px;
+  }
+
+  .video-description {
+    font-size: 14px;
+  }
+
+  .play-icon-circle {
+    width: 60px;
+    height: 60px;
+  }
+
+  .play-icon {
+    width: 30px;
+    height: 30px;
   }
 }
