--- a/src/Component/News/index.scss
+++ b/src/Component/News/index.scss
@@ -139,6 +139,9 @@
     gap: 15px;
     width: 50%;
   }
+    .textwidth100 {
+    height: 80px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -249,7 +252,7 @@
   .all {
     display: flex;
     gap: 60px;
-    top: 60px !important;
+    margin-top: 60px !important;
   }
   .overlap-22 {
     background-color: #d9d9d933;
@@ -263,10 +266,12 @@
     gap: 30px;
 
     .newsId {
+      justify-content: space-between;
       flex-direction: column !important;
       align-items: center;
       gap: 15px;
       width: 50%;
+      // height: 350px;
     }
 
     img {
@@ -296,8 +301,10 @@
     align-items: center;
     gap: 15px;
     width: 50%;
+    // height: 350px;
   }
   .textwidth100 {
     width: 90% !important;
+    height: 80px;
   }
 }
