--- a/src/Component/Video/index.scss
+++ b/src/Component/Video/index.scss
@@ -1,7 +1,7 @@
 .video-container {
   width: 100%;
   max-width: 1200px;
-  margin: auto;
+  // margin: auto;
   padding: 40px 20px;
   display: flex;
   justify-content: center;
