--- a/src/Pages/DetailsNews/index.module.css
+++ b/src/Pages/DetailsNews/index.module.css
@@ -61,6 +61,7 @@
     font-size: 15px;
     line-height: 100%;
     letter-spacing: 0%;
+    color: #cba15f;
   }
 }
 #newscontainer {
@@ -71,7 +72,7 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 30px;
-    vertical-align: middle;
+    /* vertical-align: middle; */
   }
 }
 #h3news {
@@ -100,6 +101,13 @@
   text-decoration-line: underline !important;
   text-decoration-thickness: 2px !important;
   text-underline-offset: 10px;
+}
+#colimgtitle{
+  img{
+    width: 100%;
+    object-fit: fill;
+    
+  }
 }
 @media (max-width: 768px) {
   #colimgtitle {
